--- a/css/style.css
+++ b/css/style.css
@@ -192,3 +192,49 @@ footer a {
     font-size: 5px;
   }
 }
+
+
+@media only screen and (max-device-width: 480px) {
+
+    nav {
+        width: 50%;
+        display: flex;
+        justify-content: space-around;
+        margin-left: 170px;
+        font-size: 16px;
+      }
+    
+      main {
+        width: 80%;
+        margin: auto;
+        padding-top: 25px;
+        text-align: center;
+      }
+    
+      main img {
+        width: 70%;
+      }
+    
+      main input {
+        width: 100%;
+        padding: 1em;
+        text-align: center;
+        border-radius: 20px;
+        border: 1px solid gray;
+      }
+    
+      .btn button {
+        padding: 9px;
+        border: none;
+      }
+    
+      .lang {
+        font-size: 10px;
+      }
+    
+      footer {
+        margin-top: 17rem;
+        font-size: 5px;
+      }
+
+}
